--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Explore the fascinating world of cellular automata, a simulation of cell evolution in a grid."
+    />
+    <meta
+      name="keywords"
+      content="Cellular Automata, Simulation, Cell Evolution, Grid, Automata"
+    />
+    <meta name="author" content="John Doe" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>Cellular Automata - Explore Cell Evolution</title>
   </head>
   <body>
     <div id="app"></div>
